@@ -1,6 +1,6 @@
 Package: gridGraphics
 Title: Redraw Base Graphics Using 'grid' Graphics
-Version: 0.2-1
+Version: 0.2-2
 Authors@R: c(person("Paul", "Murrell", role = c("cre", "aut"),
                     email = "paul@stat.auckland.ac.nz"),
              person("Zhijian", "Wen", role = "aut",
